# tgm4-mod

./: .dockerignore  README.md  pyproject.toml  repack.sh  unpack.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
scripts/: compress.py  convert_png_to_tws.py  convert_tws_to_png.py  decompress.py  pack.py  unpack.py
scripts/libs/: alz.py  info.py  tws.py
